erDiagram
  KYC_APPLICATIONS ||--o{ CUSTOMER_IDENTITIES : has
  KYC_APPLICATIONS ||--o{ CUSTOMER_CONTACTS : has
  KYC_APPLICATIONS ||--o{ CUSTOMER_ADDRESSES : has
  KYC_APPLICATIONS ||--o{ CUSTOMER_OCCUPATIONS_INCOME : has
  KYC_APPLICATIONS ||--o| CUSTOMER_TAX_PROFILES : has
  KYC_APPLICATIONS ||--o{ KYC_CONSENTS : has
  KYC_APPLICATIONS ||--o{ KYC_VERIFICATIONS : has
  KYC_VERIFICATIONS ||--o{ KYC_VERIFICATION_ATTEMPTS : has
  KYC_APPLICATIONS ||--o{ FACE_CHECKS : has
  KYC_APPLICATIONS ||--o{ KYC_DOCUMENTS : has
  KYC_APPLICATIONS ||--o{ SCREENING_RESULTS : has
  KYC_APPLICATIONS ||--o{ CUSTOMER_RISK_ASSESSMENTS : has
  KYC_APPLICATIONS ||--o{ KYC_CASES : has
  KYC_CASES ||--o{ KYC_CASE_ACTIONS : has
  KYC_APPLICATIONS ||--o{ KYC_DECISIONS : has
  KYC_APPLICATIONS ||--o{ KYC_STATUS_HISTORY : has
  KYC_APPLICATIONS }o--o| CUSTOMERS : creates
  CUSTOMERS ||--o{ ACCOUNTS : owns
  CUSTOMERS ||--o| CUSTOMER_RISK_PROFILES : has
  CUSTOMERS ||--o| KYC_REFRESH_SCHEDULES : has
  KYC_APPLICATIONS ||--o{ DEVICE_BINDINGS : has
  KYC_APPLICATIONS ||--o{ KYC_AUDIT_LOGS : audited_by
